fixed animated letters z-index

--- a/src/components/AnimatedLetters/index.scss
+++ b/src/components/AnimatedLetters/index.scss
@@ -1,4 +1,5 @@
 .text-animate {
+  z-index: 9;
   display: inline-block;
   opacity: 0;
   animation: bounceIn;
