--- a/src/components/Home/Logo/index.scss
+++ b/src/components/Home/Logo/index.scss
@@ -1,5 +1,5 @@
 .fade-in-image {
-  z-index: 9;
+  z-index: 1;
   width: 700px;
   height: 609px;
   opacity: 1;
